# Huffman_archiver

./: CMakeLists.txt  bint.cpp  bint.h  readme.md
src/: CONSTANTS.h  main.cpp
src/decoder/: decoder.cpp  decoder.h
src/encoder/: encoder.cpp  encoder.h  get_cnt.cpp  get_cnt.h
src/structures/: BInt.h  Bor.h  BorNode.h  PriorityQueue.h
src/structures/BInt/: BInt.cpp  BInt.h
src/structures/Bor/: Bor.cpp  Bor.h  BorNode.cpp  BorNode.h
src/structures/PriorityQueue/: PriorityQueue.cpp  PriorityQueue.h
